--- a/business-card-style.css
+++ b/business-card-style.css
@@ -1,8 +1,45 @@
 body {
-    background-color: #2C2141;
-    height: 100vh;
+  background-color: #2c2141;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
-    background-color: ivory;
+  background-color: #f8f8f8;
+  margin: 0;
+  box-sizing: border-box;
+  border-radius: 26px;
+  padding: 32px;
+  height: 320px;
+  width: 624px;
+  display: flex;
+  align-items: flex-start;
+  
+
+  
+}
+.honbun {
+  color: black;
+  font-style: normal;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  margin: 0 0 0 32px;
+
+}
+.namae {
+    margin: 0;
+    font-size: 36px;
+    line-height: 41px;
+}
+.shoku {
+    margin: 0;
+    font-size: 18px;
+}
+
+.hontai{
+    line-height: 22px;
+    margin: 24px 0 0 0;
+    font-size: 16px;
 }
